feat: Refactor and enable disabled unit tests in system module